--- a/.github/workflows/deploy-galactica-service.yml
+++ b/.github/workflows/deploy-galactica-service.yml
@@ -21,3 +21,23 @@ jobs:
 
       - name: Run Unit Tests
         run: npm run unit-test
+        
+  run-migration:
+    runs-on: ubuntu-latest
+    env:
+      DATABASE_URL: mysql://avnadmin:AVNS_ZMR2V_PGIgb1YSJLzAH@galactica-dev-pocket-pulse-db-dev.j.aivencloud.com:26783/defaultdb?ssl-mode=REQUIRED
+
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
+
+      - name: Install Dependencies
+        run: npm ci
+        
+      - name: Run Prisma Migrations
+        run: npx prisma migrate deploy
