--- a/.github/workflows/deploy-galactica-service.yml
+++ b/.github/workflows/deploy-galactica-service.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Run Unit Tests
         run: npm run unit-test
         
-  run-migration:
+  deploy-to-dev:
     runs-on: ubuntu-latest
     needs: unit-test
     env:
