--- a/.github/workflows/deploy-galactica-service.yml
+++ b/.github/workflows/deploy-galactica-service.yml
@@ -1,7 +1,7 @@
 name: Deploy Galactica Service
 
 on:
-  workflow_dispatch: 
+  workflow_dispatch:
 
 jobs:
   unit-test:
@@ -21,7 +21,7 @@ jobs:
 
       - name: Run Unit Tests
         run: npm run unit-test
-        
+
   deploy-to-dev:
     runs-on: ubuntu-latest
     needs: unit-test
@@ -39,13 +39,13 @@ jobs:
 
       - name: Install Dependencies
         run: npm ci
-        
+
       - name: Run Prisma Migrations
         run: npx prisma migrate deploy
 
       - name: Deploy to dev environment
         run: |
           npm i -g @railway/cli
-          railway up --environment ${{ secrets.RAILWAY_DEV_ENVIRONMENT_ID }}
+          railway up --project ${{ secrets.RAILWAY_PROJECT_ID }} --environment ${{ secrets.RAILWAY_DEV_ENVIRONMENT_ID }}
         env:
           RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
