- update deployment.yml

--- a/.github/workflows/deploy-galactica-service.yml
+++ b/.github/workflows/deploy-galactica-service.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Repository
+      - name: Checkout repository
         uses: actions/checkout@v3
 
       - name: Set up Node.js
@@ -16,10 +16,10 @@ jobs:
         with:
           node-version: '18'
 
-      - name: Install Dependencies
+      - name: Install dependencies
         run: npm ci
 
-      - name: Run Unit Tests
+      - name: Run unit tests
         run: npm run unit-test
 
   deploy-to-dev:
@@ -29,7 +29,7 @@ jobs:
       DATABASE_URL: ${{ secrets.DEV_DATABASE_URL }}
 
     steps:
-      - name: Checkout Repository
+      - name: Checkout repository
         uses: actions/checkout@v3
 
       - name: Set up Node.js
@@ -37,15 +37,15 @@ jobs:
         with:
           node-version: '18'
 
-      - name: Install Dependencies
+      - name: Install dependencies
         run: npm ci
 
-      - name: Run Prisma Migrations
+      - name: Run migration scrips
         run: npx prisma migrate deploy
 
       - name: Deploy to dev environment
         run: |
           npm i -g @railway/cli
-          railway up --project ${{ secrets.RAILWAY_PROJECT_ID }} --environment ${{ secrets.RAILWAY_DEV_ENVIRONMENT_ID }}
+          railway up -- --project ${{ secrets.RAILWAY_PROJECT_ID }} --environment ${{ secrets.RAILWAY_DEV_ENVIRONMENT_ID }}
         env:
           RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
