--- a/.github/workflows/deploy-galactica-service.yml
+++ b/.github/workflows/deploy-galactica-service.yml
@@ -46,6 +46,7 @@ jobs:
       - name: Deploy to dev environment
         run: |
           npm i -g @railway/cli
-          railway up -- --project ${{ secrets.RAILWAY_PROJECT_ID }} --environment ${{ secrets.RAILWAY_DEV_ENVIRONMENT_ID }}
+          railway environment ${{ secrets.RAILWAY_DEV_ENVIRONMENT_ID }}
+          railway up
         env:
           RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
