- added env approval

--- a/.github/workflows/deploy-galactica-service.yml
+++ b/.github/workflows/deploy-galactica-service.yml
@@ -24,6 +24,8 @@ jobs:
 
   deploy-to-dev:
     runs-on: ubuntu-latest
+    environment:
+      name: dev
     needs: unit-test
     env:
       DATABASE_URL: ${{ secrets.DEV_DATABASE_URL }}
