--- a/.github/workflows/deploy-galactica-service.yml
+++ b/.github/workflows/deploy-galactica-service.yml
@@ -48,7 +48,7 @@ jobs:
       - name: Deploy to dev environment
         run: |
           npm i -g @railway/cli
-          railway link --service=$RAILWAY_SERVICE_ID --project-id=$RAILWAY_PROJECT_ID --environment=$RAILWAY_ENVIRONMENT_ID
+          railway link --service=$RAILWAY_SERVICE_ID --project=$RAILWAY_PROJECT_ID --environment=$RAILWAY_ENVIRONMENT_ID
           railway redeploy --yes
         env:
           RAILWAY_API_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
