--- a/.github/workflows/deploy-galactica-service.yml
+++ b/.github/workflows/deploy-galactica-service.yml
@@ -48,6 +48,7 @@ jobs:
       - name: Deploy to dev environment
         run: |
           npm i -g @railway/cli
+          railway login --token "$RAILWAY_TOKEN"
           railway link --service=$RAILWAY_SERVICE_ID --project=$RAILWAY_PROJECT_ID --environment=$RAILWAY_ENVIRONMENT_ID
           railway up
         env:
