--- a/.github/workflows/deploy-galactica-service.yml
+++ b/.github/workflows/deploy-galactica-service.yml
@@ -45,13 +45,19 @@ jobs:
       - name: Run migration scrips
         run: npx prisma migrate deploy
 
-      - name: Deploy to dev environment
-        run: |
-          npm i -g @railway/cli
-          railway link --service=$RAILWAY_SERVICE_ID --project=$RAILWAY_PROJECT_ID --environment=$RAILWAY_ENVIRONMENT_ID
-          railway up
-        env:
-          RAILWAY_API_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
-          RAILWAY_SERVICE_ID: ${{ secrets.RAILWAY_DEV_SERVICE_ID }}
-          RAILWAY_PROJECT_ID: ${{ secrets.RAILWAY_PROJECT_ID }}
-          RAILWAY_ENVIRONMENT_ID: ${{ secrets.RAILWAY_DEV_ENVIRONMENT_ID }}
+      uses: bervProject/railway-deploy@main
+        with:
+          railway_token: ${{ secrets.RAILWAY_TOKEN }}
+          service: "Galactica"
+          detach: true
+
+      # - name: Deploy to dev environment
+      #   run: |
+      #     npm i -g @railway/cli
+      #     railway link --service=$RAILWAY_SERVICE_ID --project=$RAILWAY_PROJECT_ID --environment=$RAILWAY_ENVIRONMENT_ID
+      #     railway up
+      #   env:
+      #     RAILWAY_API_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
+      #     RAILWAY_SERVICE_ID: ${{ secrets.RAILWAY_DEV_SERVICE_ID }}
+      #     RAILWAY_PROJECT_ID: ${{ secrets.RAILWAY_PROJECT_ID }}
+      #     RAILWAY_ENVIRONMENT_ID: ${{ secrets.RAILWAY_DEV_ENVIRONMENT_ID }}
